--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,12 +10,13 @@
     <string name="productid_hint">Enter Product ID</string>
     <string name="productname_hint">Product NAme</string>
     <string name="productprice_hint">Product Price</string>
-    <string name="productweight_hint">Product Weight</string>
+    <string name="productweight_hint">Product Weight (In gm)</string>
     <string name="productquantity_hint">Product Quantity</string>
     <string name="productexpiry_hint">Product Expiry Date</string>
     <string name="productbrand_hint">Product Brand</string>
     <string name="productcategory_hint">Product Category</string>
     <string name="storeaddItem_addButton_hint">Add Item</string>
     <string name="title_activity_offer">OfferActivity</string>
-    <string name="offerHeading_hint">Offer HEading</string>
+    <string name="offerHeading_hint">Offer Details</string>
+    <string name="offerSection_hint">Offer Section</string>
 </resources>
