--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="title_activity_offer">OfferActivity</string>
     <string name="offerHeading_hint">Offer Details</string>
     <string name="offerSection_hint">Offer Section</string>
+    <string name="title_activity_thank_you">ThankYouActivity</string>
 </resources>
